<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.AccompanimentDish">

    <data>
        <variable
            name="viewModel"
            type="com.igorcasconi.lunchtray.model.LunchViewModel" />
        <variable
            name="accompanimentFragment"
            type="com.igorcasconi.lunchtray.ui.AccompanimentDish" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingRight="16dp"
            android:paddingLeft="16dp">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radio_group_accompaniment_dish"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/option_side_accompaniment_1"
                    style="@style/Widget.LunchTray.CompoundButton.RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text='@{viewModel.menuItems["bread"].name}'
                    android:checked='@{viewModel.accompanimentDish.name.equals(@string/option_accompaniment_1)}'
                    android:onClick='@{() -> viewModel.setAccompaniment("bread")}'/>

                <TextView
                    android:id="@+id/option_side_accompaniment_1_description"
                    style="@style/Widget.MenuItem.TextView.Info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text='@{viewModel.menuItems["bread"].description}'
                    />

                <TextView
                    android:id="@+id/option_side_accompaniment_1_price"
                    style="@style/Widget.MenuItem.TextView.Info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text='@{@string/option_price(viewModel.menuItems["bread"].price)}' />

                <View
                    android:id="@+id/view"
                    style="@style/Widget.LunchTray.Divider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:id="@+id/option_side_accompaniment_2"
                    style="@style/Widget.LunchTray.CompoundButton.RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text='@{viewModel.menuItems["berries"].name}'
                    android:checked='@{viewModel.accompanimentDish.name.equals(@string/option_accompaniment_2)}'
                    android:onClick='@{() -> viewModel.setAccompaniment("berries")}'/>

                <TextView
                    android:id="@+id/option_side_accompaniment_2_description"
                    style="@style/Widget.MenuItem.TextView.Info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text='@{viewModel.menuItems["berries"].description}'/>

                <TextView
                    android:id="@+id/option_side_accompaniment_2_price"
                    style="@style/Widget.MenuItem.TextView.Info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text='@{@string/option_price(viewModel.menuItems["berries"].price)}' />

                <View
                    android:id="@+id/view2"
                    style="@style/Widget.LunchTray.Divider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:id="@+id/option_side_accompaniment_3"
                    style="@style/Widget.LunchTray.CompoundButton.RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text='@{viewModel.menuItems["pickles"].name}'
                    android:checked='@{viewModel.accompanimentDish.name.equals(@string/option_accompaniment_3)}'
                    android:onClick='@{() -> viewModel.setAccompaniment("pickles")}'/>

                <TextView
                    android:id="@+id/option_side_accompaniment_3_description"
                    style="@style/Widget.MenuItem.TextView.Info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text='@{viewModel.menuItems["pickles"].description}' />

                <TextView
                    android:id="@+id/option_side_accompaniment_3_price"
                    style="@style/Widget.MenuItem.TextView.Info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text='@{@string/option_price(viewModel.menuItems["pickles"].price)}' />

                <View
                    android:id="@+id/view3"
                    style="@style/Widget.LunchTray.Divider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </RadioGroup>

            <TextView
                android:id="@+id/text_subtotal"
                style="@style/Widget.LunchTray.TextView.Subtotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text='@{@string/subtotal(viewModel.subTotal)}'
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/radio_group_accompaniment_dish" />

            <Button
                android:id="@+id/button_cancel"
                style="@style/Widget.Order.Button.Cancel"
                app:layout_constraintTop_toTopOf="@id/button_next"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/button_next"
                android:onClick='@{() -> accompanimentFragment.cancelOrder()}'/>

            <Button
                android:id="@+id/button_next"
                style="@style/Widget.Order.Button.Next"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_subtotal"
                app:layout_constraintStart_toEndOf="@id/button_cancel"
                android:onClick='@{() -> accompanimentFragment.goToNextScreen()}'/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>