...
                android:layout_height="wrap_content"
                android:text='@{@string/subtotal_order(viewModel.subTotal)}'
                android:gravity="end"
                 />

            <TextView
                android:id="@+id/tax_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.LunchTray.TextView.CheckoutItem.Info"
                android:text='@{@string/tax(viewModel.tax)}'
                android:gravity="end"/>

            <TextView
                android:id="@+id/total_order"
                style="@style/Widget.LunchTray.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text='@{@string/total(viewModel.total)}'
                android:textSize="18sp"
...
